--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -68,9 +68,9 @@
                 </div>
             </div>
             <div class="time_buttons">
-                <button class="btn" id="start">Start</button>
-                <button class="btn" id="stop">Stop</button>
-                <button class="btn" id="reset">Reset</button>
+                <button onclick="start()" class="btn" id="start">Start</button>
+                <button onclick="stopp()" class="btn" id="stop">Stop</button>
+                <button onclick="reset()" class="btn" id="reset">Reset</button>
             </div>
         </div>
     </div>
