--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -127,6 +127,8 @@
                 <button class="btn" id="btn-prev">prev</button>
                 <div class="card"></div>
                 <button class="btn" id="btn-next">next</button>
+                <br>
+                <button type="button" class="buttonSwitcher">NewPage</button>
             </div>
         </div>
     </div>
